refactor changing a filename to changing a folder name

--- a/ConsoleZipChangeFileName/ConsoleZipChangeFileName.csproj
+++ b/ConsoleZipChangeFileName/ConsoleZipChangeFileName.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="data\app.zip">
+    <None Update="data\XamarinMacAppPipelineTest.app.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
